--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,11 @@
 body {
   font-family: "Syne Mono", monospace;
-  font-size: 24px;
+  font-size: 30px;
   letter-spacing: normal;
   color: #944018;
   background-color: #c5a26c;
+
+  box-sizing: border-box;
 }
 
 .timer {
@@ -13,7 +15,7 @@ body {
 }
 
 .field {
-  width: 65px;
+  width: 100px;
   margin-right: 20px;
   padding: 5px 5px;
 
@@ -21,6 +23,7 @@ body {
   border-radius: 3px;
   border: 1px solid #5c858b;
   box-shadow: 10px 10px 8px 2px rgba(0, 0, 0, 0.3);
+  box-sizing: border-box;
 }
 .field:last-child {
   margin-right: 0;
@@ -37,5 +40,5 @@ body {
 }
 
 .label {
-  font-size: 16px;
+  font-size: 18px;
 }
